--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>Dofree</title>
+    <title>Imporbox</title>
 </head>
 
 <body class="d-flex">
@@ -18,12 +18,12 @@
         </div>
         <div class="row">
             <div class="col-sm-6 col-12">
-                <img src="./img/portada__dofree.png" alt="" class="imagen">
+                <img src="./img/portada__imporbox.png" alt="" class="imagen">
             </div>
 
 
             <div class="col-sm-6 col-12 d-flex justify-content-center flex-column align-items-center text-center">
-                <img src="./img/logo-dofree.png" class="logo">
+                <img src="./img/logo_imporbox.png" class="logo">
                 <h1 class="mt-1">ESTAMOS EN CONSTRUCCIÓN</h1>
                 <h2 class="mt-1">Algo maravilloso está por salir a la luz</h2>
                 <input v-model="nombre" placeholder="Ingresa tu nombre" class="nombre">
